TL-30877 totara_engage: Fixed full page loader overlapping session time out modal

--- a/client/component/tui/src/global_styles/variables/tui_zindex.scss
+++ b/client/component/tui/src/global_styles/variables/tui_zindex.scss
@@ -17,6 +17,7 @@
 // #dock is 12000, modal must be above that
 :root {
   --zindex-modal: 100050;
+  --zindex-error-modal: 100070;
   --zindex-modal-backdrop: 100040;
   --zindex-popover: 100030;
   --zindex-dropdown-menu: 10000;
